--- a/pfizer/index.html
+++ b/pfizer/index.html
@@ -9,10 +9,10 @@
     const image = document.getElementById('dynamicImage');
 
     if (categoryName === "Cancer") {
-        image.src = 'http://localhost:3000/pfizer_oncology.jpg';
+        image.src = 'https://samsgilman10.github.io/oe-ads-external-server/pfizer/pfizer_oncology.jpg';
         link.href = 'https://www.pfizer.com/science/focus-areas/oncology';
     } else if (categoryName === "Covid") {
-        image.src = 'http://localhost:3000/paxlovid_ad.jpg';
+        image.src = 'https://samsgilman10.github.io/oe-ads-external-server/pfizer/paxlovid_ad.jpg';
         link.href = 'https://www.paxlovid.com/';
     }
 </script>
