--- a/pfizer/index.html
+++ b/pfizer/index.html
@@ -1,5 +1,5 @@
 <a id='dynamicLink' href="" target=”_blank”>
-    <img id="dynamicImage" src="" alt="">
+    <img id="dynamicImage" src="" alt="" style="height: 250; width: 300; margin: 0;">
 </a>
 <script>
     const urlParams = new URLSearchParams(window.location.search);
@@ -16,3 +16,9 @@
         link.href = 'https://www.paxlovid.com/';
     }
 </script>
+<style>
+* {
+    margin: 0;
+    padding: 0;
+}
+</style>
