--- a/eliLilly/index.html
+++ b/eliLilly/index.html
@@ -1,1 +1,13 @@
-<div> Eli Lilly Hello World </div>
+<a id='dynamicLink' href="https://mounjaro.lilly.com/" target=”_blank”>
+    <img
+        id="dynamicImage"
+        src="https://samsgilman10.github.io/oe-ads-external-server/eliLilly/mounjaro.jpg"
+        alt="" 
+    >
+</a>
+<style>
+* {
+    margin: 0;
+    padding: 0;
+}
+</style>
