--- a/pfizer/index.html
+++ b/pfizer/index.html
@@ -1,5 +1,5 @@
 <a id='dynamicLink' href="" target=”_blank”>
-    <img id="dynamicImage" src="" alt="" style="height: 250; width: 300; margin: 0;">
+    <img id="dynamicImage" src="" alt="">
 </a>
 <script>
     const urlParams = new URLSearchParams(window.location.search);
